--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,4 +4,7 @@
     <script src="https://unpkg.com/shepherd.js@latest/dist/js/shepherd.min.js"></script>
 
   </head>
+  <div class="step1-element">Step 1 Target Area</div>
+<div class="step2-element">Step 2 Target Area</div>
+
 </html>
