--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="https://unpkg.com/shepherd.js@latest/dist/css/shepherd.css">
     <script src="https://unpkg.com/shepherd.js@latest/dist/js/shepherd.min.js"></script>
-
+<script src="/path/to/tour.js"></script>
   </head>
  
 
