--- a/layouts/default.html
+++ b/layouts/default.html
@@ -5,5 +5,9 @@
 <script src="/path/to/tour.js"></script>
   </head>
  
-
+<div class="screenshot">
+  <img src="images/screenshot-library_marietta_edu-2024_11_06-13_09_27.png" alt="Screenshot" style="width: 100%; position: relative;">
+  <div class="step1-element" style="position: absolute; top: 20%; left: 30%;">Step 1 Target Area</div>
+  <div class="step2-element" style="position: absolute; top: 50%; left: 60%;">Step 2 Target Area</div>
+</div>
 </html>
