--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,13 +1,17 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="https://unpkg.com/shepherd.js@latest/dist/css/shepherd.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="/path/to/styles.css">
     <script src="https://unpkg.com/shepherd.js@latest/dist/js/shepherd.min.js"></script>
-<script src="/path/to/tour.js"></script>
-  </head>
- 
-<div class="screenshot">
-  <img src="images/screenshot-library_marietta_edu-2024_11_06-13_09_27.png" alt="Screenshot" style="width: 100%; position: relative;">
-  <div class="step1-element" style="position: absolute; top: 20%; left: 30%;">Step 1 Target Area</div>
-  <div class="step2-element" style="position: absolute; top: 50%; left: 60%;">Step 2 Target Area</div>
-</div>
+</head>
+<body>
+    <header>My Site Header</header>
+    <main>
+        {{ content }}
+    </main>
+    <footer>My Site Footer</footer>
+</body>
 </html>
+
